--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <body style = "background-color: aquamarine"></body>
+    <body style = "background-color: rgb(21, 181, 221)"></body>
     <h1>
         Howdy! I'm Evan.
     </h1>
