--- a/index.html
+++ b/index.html
@@ -1,16 +1,99 @@
-<html>
-    <body style = "background-color: rgb(21, 181, 221)"></body>
-    <h1>
-        Howdy! I'm Evan.
-    </h1>
-    <body>
-        <h2>About me</h2>
-        <p>
-            I'm a CS Student at the Milwaukee School of Engineering in Milwaukee, WI!
-        </p>
-        <h2>What I'm working on</h2>
-        <p>
-            Machine Learning-Assisted Vocal Cord Ultrasound Examination: Project VIPR
-        </p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Evan Schubert - Computer Science Student</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+    <nav class="nav-bar">
+        <div class="container">
+            <div class="logo">ES</div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#publications">Publications</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <header class="hero">
+        <div class="container">
+            <h1>Evan Schubert</h1>
+            <p class="subtitle">Computer Science Student at MSOE</p>
+            <div class="social-links">
+                <a href="mailto:schuberte@msoe.edu"><i class="fas fa-envelope"></i></a>
+                <a href="https://linkedin.com/in/schubertevan/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            </div>
+        </div>
+    </header>
+
+    <section id="about" class="section">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>B.S. Computer Science student at MSOE with internship experience and numerous, diverse, hands-on and team-based project experiences. Skilled in Python, Java, SQL, R, and C/C++, with expertise in Data Structures & Algorithms, Agile, AWS, and Git.</p>
+        </div>
+    </section>
+
+    <section id="experience" class="section">
+        <div class="container">
+            <h2>Experience</h2>
+            <div class="experience-card">
+                <h3>IT Client Services Intern</h3>
+                <p class="company">American Transmission Company | Pewaukee, WI</p>
+                <p class="date">May 2024 – August 2024</p>
+                <ul>
+                    <li>Collaborated with Data Analytics Team to develop SQL queries for asset inspection analysis</li>
+                    <li>Leveraged PowerBI for data visualization and presentation</li>
+                    <li>Facilitated company-wide software migration and implementation</li>
+                </ul>
+            </div>
+            <div class="experience-card">
+                <h3>Desktop Admin Intern</h3>
+                <p class="company">American Transmission Company | Pewaukee, WI</p>
+                <p class="date">May 2023 – Jan 2024</p>
+                <ul>
+                    <li>Managed software & hardware deployment projects</li>
+                    <li>Provided comprehensive technical support and device provisioning</li>
+                    <li>Developed strong customer service skills</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section id="publications" class="section">
+        <div class="container">
+            <h2>Publications</h2>
+            <div class="publication-card">
+                <h3>Machine Learning-Assisted Vocal Cord Ultrasound Examination: Project VIPR</h3>
+                <a href="https://drive.google.com/file/d/1A4-Z5jlpEH6PvEz1E_MYq7pu8JTWw5w3/view" target="_blank" class="button">Read Paper</a>
+            </div>
+            <div class="publication-card">
+                <h3>Reading Between The Lungs</h3>
+                <a href="https://drive.google.com/file/d/1glyTtyK3NwzKZMlQXTDvjHmZ0OsCvJ43/view" target="_blank" class="button">Read Paper</a>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="section">
+        <div class="container">
+            <h2>Contact</h2>
+            <div class="contact-info">
+                <p><i class="fas fa-envelope"></i> schuberte@msoe.edu</p>
+                <p><i class="fas fa-phone"></i> (920) 342-2651</p>
+                <p><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/schubertevan/" target="_blank">linkedin.com/in/schubertevan/</a></p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Evan Schubert. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
 </html>
