--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <a href="https://drive.google.com/file/d/1A4-Z5jlpEH6PvEz1E_MYq7pu8JTWw5w3/view" target="_blank" class="button">Read Paper</a>
             </div>
             <div class="publication-card">
-                <h3>Reading Between The Lungs</h3>
+                <h3>Reading Between the Lungs: Evaluation of Deep Learning Model Architectures for COVID-19 Classification on Segmented Chest X-rays</h3>
                 <a href="https://drive.google.com/file/d/1glyTtyK3NwzKZMlQXTDvjHmZ0OsCvJ43/view" target="_blank" class="button">Read Paper</a>
             </div>
         </div>
@@ -84,7 +84,6 @@
             <h2>Contact</h2>
             <div class="contact-info">
                 <p><i class="fas fa-envelope"></i> schuberte@msoe.edu</p>
-                <p><i class="fas fa-phone"></i> (920) 342-2651</p>
                 <p><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/schubertevan/" target="_blank">linkedin.com/in/schubertevan/</a></p>
             </div>
         </div>
