changes to the website

--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
                     <div class="publication-content">
                         <h3>Machine Learning-Assisted Vocal Cord Ultrasound Examination: Project VIPR</h3>
                         <p class="publication-description">Advanced research in medical imaging and machine learning applications</p>
+                        <div class="award-badge">
+                            <i class="fas fa-trophy"></i>
+                            <span>1st Place - Best Undergraduate Research Paper (MICS 2025)</span>
+                        </div>
                         <a href="https://drive.google.com/file/d/1A4-Z5jlpEH6PvEz1E_MYq7pu8JTWw5w3/view" target="_blank" class="button primary">Read Paper</a>
                     </div>
                 </div>
@@ -130,8 +134,32 @@
                     <div class="publication-content">
                         <h3>Reading Between the Lungs: Evaluation of Deep Learning Model Architectures for COVID-19 Classification on Segmented Chest X-rays</h3>
                         <p class="publication-description">Innovative approach to COVID-19 detection using deep learning</p>
+                        <div class="award-badge">
+                            <i class="fas fa-medal"></i>
+                            <span>3rd Place - Best Undergraduate Research Paper (MICS 2024)</span>
+                        </div>
                         <a href="https://drive.google.com/file/d/1glyTtyK3NwzKZMlQXTDvjHmZ0OsCvJ43/view" target="_blank" class="button primary">Read Paper</a>
                     </div>
+                </div>
+            </div>
+            <div class="awards-showcase">
+                <div class="award-item">
+                    <i class="fas fa-trophy"></i>
+                    <h3>1st Place</h3>
+                    <p>Best Undergraduate Research Paper</p>
+                    <span class="award-year">MICS 2025</span>
+                </div>
+                <div class="award-item">
+                    <i class="fas fa-medal"></i>
+                    <h3>3rd Place</h3>
+                    <p>Best Undergraduate Research Paper</p>
+                    <span class="award-year">MICS 2024</span>
+                </div>
+                <div class="award-item">
+                    <i class="fas fa-award"></i>
+                    <h3>1st Place</h3>
+                    <p>LLM Chatbot Prompt Writing</p>
+                    <span class="award-year">MSOE 2024</span>
                 </div>
             </div>
         </div>
