--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <header class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Computer Science Student & Researcher</h1>
-                <p class="subtitle">Specializing in Machine Learning and Software Development</p>
+                <h1><span class="gradient-text">Computer</span> <span class="gradient-text-2">Science</span> <span class="gradient-text-3">Student</span> <span class="gradient-text">&</span> <span class="gradient-text-4">Researcher</span></h1>
+                <p class="subtitle"><span class="gradient-text-5">Specializing</span> in <span class="gradient-text-6">Machine</span> <span class="gradient-text-7">Learning</span> and <span class="gradient-text-8">Software</span> <span class="gradient-text-9">Development</span></p>
                 <div class="hero-buttons">
                     <a href="#publications" class="button primary">View Publications</a>
                     <a href="#contact" class="button secondary">Get in Touch</a>
@@ -58,6 +58,7 @@
                     <p>Milwaukee School of Engineering</p>
                     <p>B.S. Computer Science</p>
                     <p>GPA: 3.19</p>
+                    <p>Incoming Automation & AI Intern @ Husco</p>
                 </div>
                 <div class="about-card">
                     <i class="fas fa-code"></i>
@@ -69,8 +70,9 @@
                 <div class="about-card">
                     <i class="fas fa-trophy"></i>
                     <h3>Achievements</h3>
-                    <p>1st Place - LLM Chatbot Prompt Writing</p>
-                    <p>3rd Place - Best Undergraduate Research Paper</p>
+                    <p>1st Place - Best Undergraduate Research Paper (MICS 2025)</p>
+                    <p>3rd Place - Best Undergraduate Research Paper (MICS 2024)</p>
+                    <p>1st Place - LLM Chatbot Prompt Writing (MSOE 2024)</p>
                 </div>
             </div>
         </div>
@@ -86,7 +88,6 @@
                 <div class="experience-card">
                     <div class="experience-header">
                         <h3>IT Client Services Intern</h3>
-                        <span class="tag">Current</span>
                     </div>
                     <p class="company">American Transmission Company</p>
                     <p class="date">May 2024 – August 2024</p>
@@ -121,26 +122,29 @@
             <div class="publications-grid">
                 <div class="publication-card">
                     <div class="publication-content">
-                        <h3>Machine Learning-Assisted Vocal Cord Ultrasound Examination: Project VIPR</h3>
-                        <p class="publication-description">Advanced research in medical imaging and machine learning applications</p>
                         <div class="award-badge">
                             <i class="fas fa-trophy"></i>
                             <span>1st Place - Best Undergraduate Research Paper (MICS 2025)</span>
                         </div>
+                        <h3>Machine Learning-Assisted Vocal Cord Ultrasound Examination: Project VIPR</h3>
+                        <p class="publication-description">Advanced research in medical imaging and machine learning applications</p>
                         <a href="https://drive.google.com/file/d/1A4-Z5jlpEH6PvEz1E_MYq7pu8JTWw5w3/view" target="_blank" class="button primary">Read Paper</a>
                     </div>
                 </div>
                 <div class="publication-card">
                     <div class="publication-content">
-                        <h3>Reading Between the Lungs: Evaluation of Deep Learning Model Architectures for COVID-19 Classification on Segmented Chest X-rays</h3>
-                        <p class="publication-description">Innovative approach to COVID-19 detection using deep learning</p>
                         <div class="award-badge">
                             <i class="fas fa-medal"></i>
                             <span>3rd Place - Best Undergraduate Research Paper (MICS 2024)</span>
                         </div>
+                        <h3>Reading Between the Lungs: Evaluation of Deep Learning Model Architectures for COVID-19 Classification on Segmented Chest X-rays</h3>
+                        <p class="publication-description">Innovative approach to COVID-19 detection using deep learning</p>
                         <a href="https://drive.google.com/file/d/1glyTtyK3NwzKZMlQXTDvjHmZ0OsCvJ43/view" target="_blank" class="button primary">Read Paper</a>
                     </div>
                 </div>
+            </div>
+            <div class="section-header awards-header">
+                <h2>Achievements</h2>
             </div>
             <div class="awards-showcase">
                 <div class="award-item">
